# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: PyCi.yml
page_analyzer/: __init__.py  app.py  check.py  config.py  db.py  errors.py  models.py  normalizer.py  repository.py  urls_repository.py  validator.py
page_analyzer/templates/: error.html  flash_messages.html  index.html  layout.html  navbar.html  show.html  urls.html
